--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <img src="./images/image-qr-code.png" alt="QR image code preview" title="QR Image Code">
               </div>
               <div class="main__container--text">
-                  <p>Improve your front-end skills by building projects</p>
+                  <h1>Improve your front-end skills by building projects</h1>
                   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
               </div>
         </section>
